Java Testing for COMP1110 added